WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40008
Leaks in listDirectory
https://bugs.webkit.org/show_bug.cgi?id=40008
Summary
Leaks in listDirectory
Alejandro G. Castro
Reported
2010-06-01 10:21:52 PDT
valgrind show a couple of leaks in the file FileSystemGtk.cpp: ==18726== at 0x4C221A7: malloc (vg_replace_malloc.c:195) ==18726== by 0xFF6E816: g_malloc (gmem.c:131) ==18726== by 0xFF78082: g_pattern_spec_new (gpattern.c:268) ==18726== by 0x5955C32: WebCore::listDirectory(WebCore::String const&, WebCore::String const&) (FileSystemGtk.cpp:211) ==18726== at 0x4C221A7: malloc (vg_replace_malloc.c:195) ==18726== by 0xFF6E816: g_malloc (gmem.c:131) ==18726== by 0xFFA3B8F: g_uri_unescape_segment (gurifuncs.c:98) ==18726== by 0xFFA3C88: g_uri_unescape_string (gurifuncs.c:159) ==18726== by 0x59556A5: WebCore::filenameFromString(WebCore::String const&) (FileSystemGtk.cpp:60) ==18726== by 0x5955BEB: WebCore::listDirectory(WebCore::String const&, WebCore::String const&) (FileSystemGtk.cpp:206)
Attachments
Proposed patch
(1.62 KB, patch)
2010-06-01 10:25 PDT
,
Alejandro G. Castro
xan.lopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2010-06-01 10:25:11 PDT
Created
attachment 57563
[details]
Proposed patch
Xan Lopez
Comment 2
2010-06-01 10:27:13 PDT
Comment on
attachment 57563
[details]
Proposed patch ok
Alejandro G. Castro
Comment 3
2010-06-04 03:57:18 PDT
Landed
r60673
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug