2010-06-04  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Xan Lopez.

        Leaks in listDirectory
        https://bugs.webkit.org/show_bug.cgi?id=40008

        Fixed both leaks.

        * platform/gtk/FileSystemGtk.cpp:
        (WebCore::listDirectory):

Canonical link: https://commits.webkit.org/51697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60673 268f45cc-cd09-0410-ab3c-d52691b4dbfc